# nocoru

./: .gitattributes  .gitmodules  .luarc.json  Cargo.toml  README.md  dap_conf.lua
assets/characters/: enemy_t1_mat.yaml  enemy_t2_mat.yaml
game/: Cargo.toml
game/assets/: enemy_1_mat.yaml  enemy_2_mat.yaml  ground_1_mat.yaml  player_mat.yaml
game/assets/characters/: enemy_t1_mat.yaml  enemy_t2_mat.yaml  player_mat.yaml
game/assets/chars_v1/: enemy_t1_mat.yaml  enemy_t2_mat.yaml  player_mat.yaml
game/assets/environment/: ground_t1_mat.yaml
game/assets/fonts/: font_bm_fira_code.fnt  font_bm_fira_code_mat.yaml
game/crates/nocoru/: Cargo.toml
game/crates/nocoru/src/: main.rs  scene.rs
game/crates/nocoru/src/systems/: collision_system.rs  enemy_kill_system.rs  enemy_spawn_system.rs  mod.rs  movement.rs
game/shaders/: bmfont.frag  bmfont.frag.spv  bmfont.vert  bmfont.vert.spv  builtin.ui.frag  builtin.ui.frag.spv  builtin.ui.vert  builtin.ui.vert.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  sprite_vert.spv  test.frag  test.frag.spv  test.vert  test.vert.spv
hellmut/lib/hell_app/: Cargo.toml
hellmut/lib/hell_app/src/: app.rs  lib.rs
hellmut/lib/hell_common/: Cargo.toml
hellmut/lib/hell_common/src/: lib.rs  transform.rs  window.rs
hellmut/lib/hell_core/: Cargo.toml
hellmut/lib/hell_core/src/: error.rs  lib.rs
hellmut/lib/hell_core/src/collections/: dyn_array.rs  hash_vec.rs  hell_handle.rs  mod.rs  queue_array.rs  slot_array.rs  stack_array.rs
hellmut/lib/hell_core/src/collections/experimental/: linked_list.rs
hellmut/lib/hell_gui/: Cargo.toml
hellmut/lib/hell_gui/src/: lib.rs
hellmut/lib/hell_gui/src/text/: mod.rs  text_mesh.rs
hellmut/lib/hell_input/: Cargo.toml
hellmut/lib/hell_input/src/: input.rs  keycodes.rs  lib.rs
hellmut/lib/hell_math/: Cargo.toml
hellmut/lib/hell_math/src/: lib.rs  mat.rs  vec.rs
hellmut/lib/hell_mod_llm/: Cargo.toml
hellmut/lib/hell_mod_llm/src/llm/: vendor.rs
hellmut/lib/hell_mod_llm/src/openai/: chat.rs  mod.rs  model.rs  role.rs
hellmut/lib/hell_mod_web_client/: Cargo.toml
hellmut/lib/hell_mod_web_client/src/: error.rs  lib.rs  logging.rs  utils.rs
hellmut/lib/hell_mod_web_client/src/view/: context.rs  mod.rs  presenter.rs
hellmut/lib/hell_mod_web_client/src/view/ident/: mod.rs
hellmut/lib/hell_physics/: Cargo.toml
hellmut/lib/hell_physics/src/: config.rs  lib.rs
hellmut/lib/hell_physics/src/collision/: aabb.rs
hellmut/lib/hell_renderer/: Cargo.toml  test.glsl
hellmut/lib/hell_renderer/src/: camera.rs  config.rs  hell_renderer.rs  lib.rs
hellmut/lib/hell_renderer/src/render_types/: glsl.rs  mod.rs  scope.rs  stage.rs
hellmut/lib/hell_renderer/src/resources/: common.rs  materials.rs  mod.rs  textures.rs
hellmut/lib/hell_renderer/src/resources/shader/: config.rs  mod.rs
hellmut/lib/hell_renderer/src/vulkan/: debugging.rs  frame.rs  mod.rs  platforms.rs  shader_program.rs  validation_layers.rs  vertext.rs  vulkan_backend.rs  vulkan_context.rs
hellmut/lib/hell_renderer/src/vulkan/pipeline/: mod.rs  shader.rs  shader_data.rs
hellmut/lib/hell_renderer/src/vulkan/primitives/: mod.rs  vulkan_buffer.rs  vulkan_command_buffer.rs  vulkan_descriptor_set.rs  vulkan_device.rs  vulkan_fence.rs  vulkan_framebuffer.rs  vulkan_image.rs  vulkan_instance.rs  vulkan_memory.rs  vulkan_physical_device.rs  vulkan_queue.rs  vulkan_render_pass.rs  vulkan_sampler.rs  vulkan_semaphore.rs  vulkan_surface.rs  vulkan_swapchain.rs  vulkan_texture.rs
hellmut/lib/hell_renderer/tools/: build_shaders.sh
hellmut/lib/hell_resources/: Cargo.toml
hellmut/lib/hell_resources/src/: lib.rs
hellmut/lib/hell_resources/src/fonts/: font_file.rs  mod.rs
hellmut/lib/hell_utils/: Cargo.toml
hellmut/lib/hell_utils/src/: conversion.rs  lib.rs
hellmut/lib/hell_winit/: Cargo.toml
hellmut/lib/hell_winit/src/: input.rs  lib.rs  window.rs
hellmut/lib/hell_winit/src/utils/: fps_limiter.rs  mod.rs
hellmut/tools/: build.sh  compile_shaders.sh
lib/hell_core/: Cargo.toml
lib/hell_core/src/: error.rs  lib.rs
lib/hell_mod_llm/src/: lib.rs
lib/hell_mod_llm/src/llm/: api.rs  chat.rs  mod.rs  model.rs  role.rs
lib/hell_mod_llm/src/openai/: api.rs  auth.rs
lib/hell_mod_web_client/: Cargo.toml
lib/hell_mod_web_client/src/: fetch.rs
lib/hell_mod_web_client/src/view/: element.rs  event.rs
lib/hell_mod_web_client/src/view/ident/: hell_style.rs
lib/hell_mod_web_client/styles/: hell.css
shaders/: parse.glsl  sprite.frag.spv  sprite.vert  sprite.vert.spv  test.frag
tools/: build.sh  build_shaders.sh  check.sh  run.sh  subtree_fetch  subtree_pull  subtree_push
