[workspace]
members = [
    "bin/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [ "helloki <helloki@mailbox.org>" ]

[workspace.dependencies]

# hellmut - lib
hell_core   = { path = "hellmut/lib/hell_core" }
hell_common = { path = "hellmut/lib/hell_common" }
hell_app    = { path = "hellmut/lib/hell_app" }
hell_gui    = { path = "hellmut/lib/hell_gui" }
hell_input  = { path = "hellmut/lib/hell_input" }
hell_math   = { path = "hellmut/lib/hell_math" }
hell_mod_llm        = { path = "hellmut/lib/hell_mod_llm" }
hell_mod_web_client = { path = "hellmut/lib/hell_mod_web_client" }
hell_physics    = { path = "hellmut/lib/hell_physics" }
hell_renderer   = { path = "hellmut/lib/hell_renderer" }
hell_resources  = { path = "hellmut/lib/hell_resources" }
hell_utils      = { path = "hellmut/lib/hell_utils" }
hell_winit      = { path = "hellmut/lib/hell_winit" }
