[package]
name = "nocoru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hell_common    = { path = "../../../hellengine/crates/hell_common" }
hell_error     = { path = "../../../hellengine/crates/hell_error" }
hell_app       = { path = "../../../hellengine/crates/hell_app" }
hell_window    = { path = "../../../hellengine/crates/hell_window" }
hell_renderer  = { path = "../../../hellengine/crates/hell_renderer" }
hell_resources = { path = "../../../hellengine/crates/hell_resources" }
