[package]
name = "nocoru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hell_common    = { path = "../../../hellengine/engine/crates/hell_common" }
hell_error     = { path = "../../../hellengine/hust/crates/hell_error" }
hell_input     = { path = "../../../hellengine/engine/crates/hell_input" }
hell_app       = { path = "../../../hellengine/engine/crates/hell_app" }
hell_winit     = { path = "../../../hellengine/engine/crates/hell_winit" }
hell_renderer  = { path = "../../../hellengine/engine/crates/hell_renderer" }
hell_resources = { path = "../../../hellengine/engine/crates/hell_resources" }
hell_physics   = { path = "../../../hellengine/engine/crates/hell_physics" }

glam = "0.21.3"
