[package]
name    = "hell_input"
version = "0.1.0"
edition = "2021"
authors = [ "Lucas Muller <muller.lucas@mailbox.org>" ]

[dependencies]
hell_core = { path = "../hell_core" }

bitflags   = "2.4.0"
strum      = { version = "0.25.0", features = [ "derive" ] }
num-traits = "0.2.16"
num-derive = "0.4.0"
