[package]
name = "hell_mod_llm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hell_core.workspace = true

async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[features]
server = []
