[package]
name    = "hell_mod_web_client"
version = "0.1.0"
edition = "2021"
authors = [ "Lucas Muller <muller.lucas@mailbox.org>" ]

[dependencies]
# hellmut
hell_core = { path = "../hell_core" }
# extern
console_error_panic_hook = "0.1.7"
js-sys     = "0.3.64"
paste      = "1.0.14"
serde      = "1.0.185"
serde_json = "1.0.105"
serde-wasm-bindgen   = "0.5.0"
wasm-bindgen         = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Document",
    "DomTokenList", # class-list
    "Element",
    "KeyboardEvent",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Headers",
    "Node",
    "RequestInit",
    "Request",
    "RequestMode",
    "Response",
    "Window",
]
