[package]
name    = "hell_resources"
version = "0.1.0"
edition = "2021"
authors = [ "Lucas Muller <muller.lucas@mailbox.org>" ]

[dependencies]
# hellmut
hell_core = { path = "../hell_core" }
# extern
image      = "0.24.7"
serde      = { version = "1.0.185", features = ["derive"] }
serde_yaml = "0.9.25"
