[package]
name    = "hell_winit"
version = "0.1.0"
edition = "2021"
authors = [ "Lucas Muller <muller.lucas@mailbox.org>" ]

[dependencies]
# hellmut
hell_core   = { path = "../hell_core" }
hell_common = { path = "../hell_common" }
hell_input  = { path = "../hell_input" }
hell_app    = { path = "../hell_app" }
# extern
winit = "0.28.6"
